--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  @apply bg-background font-sans h-full text-gray;
+  @apply bg-background font-sans min-h-screen text-gray;
 }
 
 .btn-home {
